--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
-    "swr": "^2.2.5"
+    "redux-thunk": "^3.1.0",
+    "swr": "^2.2.5",
+    "thunk": "^0.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
